strange error with white area at the bottom of mobile devices is not yet fixed but should be less visible

--- a/src/style.css
+++ b/src/style.css
@@ -23,3 +23,7 @@
 ::-webkit-scrollbar-thumb:hover {
     background: #2f2f2f;
 }
+
+template {
+    background-color: #1f1f1f;
+}
